unpackaged/main/default/objects/Account/fields/Additional_R_T_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Additional_R_T_Numbers__c</fullName>
    <label>Additional R T Numbers</label>
    <length>9</length>
    <type>Text</type>
</CustomField>