unpackaged/main/default/objects/Account/fields/Ariba_Contract__c.field-meta.xml
<CustomField>
    <fullName>Ariba_Contract__c</fullName>
    <label>Ariba Contract</label>
    <length>100</length>
    <type>Text</type>
</CustomField>