unpackaged/main/default/objects/Account/fields/Ariba_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Ariba_Supplier__c</fullName>
    <label>Ariba Supplier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>