unpackaged/main/default/objects/Account/fields/Avalara_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Avalara_Customer_Id__c</fullName>
    <description>Avalara ECM customer ID returned by the CreateCustomers API. When populated, indicates the Account is already registered in Avalara and skips duplicate registration.</description>
    <label>Avalara Customer Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>