unpackaged/main/default/objects/Account/fields/Billing_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Billing_Calculation__c</fullName>
    <label>Billing Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiered</fullName>
                <default>true</default>
                <label>Tiered</label>
            </value>
            <value>
                <fullName>Fixed | By Volume</fullName>
            </value>
            <value>
                <fullName>Fixed | By Parts Per Million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>