unpackaged/main/default/objects/Account/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <type>TextArea</type>
</CustomField>