unpackaged/main/default/objects/Account/fields/Billing_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Billing_Quarter__c</fullName>
    <label>Billing Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Q</fullName>
            </value>
            <value>
                <fullName>1QFull</fullName>
            </value>
            <value>
                <fullName>2Q</fullName>
            </value>
            <value>
                <fullName>3Q</fullName>
            </value>
            <value>
                <fullName>4Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>