unpackaged/main/default/objects/Account/fields/Billing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Billing_Tier__c</fullName>
    <formula>IF( Total_Deposits__c  &lt;= 10000000, &quot;Under $10 Million&quot;,
IF(Total_Deposits__c  &gt;= 10000001 &amp;&amp; Total_Deposits__c  &lt;= 25000000 , &quot;$10 Million up to $25 Million&quot;,
IF(Total_Deposits__c  &gt;= 25000001 &amp;&amp; Total_Deposits__c  &lt;= 50000000, &quot;$25 Million up to $50 Million&quot;,
IF(Total_Deposits__c  &gt;= 50000001 &amp;&amp; Total_Deposits__c  &lt;= 100000000, &quot;$50 Million up to $100 Million&quot;,
IF(Total_Deposits__c  &gt;= 100000001 &amp;&amp; Total_Deposits__c  &lt;= 500000000, &quot;$100 Million up to $500 Million&quot;,
IF(Total_Deposits__c  &gt;= 500000001 &amp;&amp; Total_Deposits__c  &lt;= 1000000000, &quot;$500 Million up to $1 Billion&quot;,
IF(Total_Deposits__c  &gt;= 1000000001 &amp;&amp; Total_Deposits__c  &lt;= 5000000000, &quot;$1 Billion up to $5 Billion&quot;,
IF(Total_Deposits__c  &gt;= 5000000001 &amp;&amp; Total_Deposits__c  &lt;= 20000000000, &quot;$5 Billion up to $20 Billion&quot;,
IF(Total_Deposits__c  &gt;= 20000000001 &amp;&amp; Total_Deposits__c &lt;= 60000000000, &quot;$20 Billion up to $60 Billion&quot;,
IF(Total_Deposits__c  &gt;= 60000000001 &amp;&amp; Total_Deposits__c  &lt;= 100000000000, &quot;$60 Billion up to $100 Billion&quot;,
IF(Total_Deposits__c &gt;= 100000000001 &amp;&amp; Total_Deposits__c  &lt;= 150000000000, &quot;$100 Billion up to $150 Billion&quot;,
IF(Total_Deposits__c  &gt;= 150000000001 &amp;&amp; Total_Deposits__c  &lt;= 200000000000,&quot;$150 Billion up to $200 Billion&quot;,
IF(Total_Deposits__c  &gt;= 200000000001, &quot;Over $200 Billion&quot;, null
)))))))))))))</formula>
    <inlineHelpText>Formula to determine which billing tier a user is on based on their deposit information</inlineHelpText>
    <label>SM  Billing Tier</label>
    <type>Text</type>
</CustomField>