unpackaged/main/default/objects/Account/fields/Bypass_Avalara_Tax__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Avalara_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, all Avalara tax calculation is bypassed for this Account: no tax is estimated at checkout and no transaction is committed to Avalara. Use for fully tax-exempt organizations.</description>
    <inlineHelpText>When checked, no sales tax is calculated or charged for orders tied to this Account.</inlineHelpText>
    <label>Bypass Avalara Tax</label>
    <type>Checkbox</type>
</CustomField>