unpackaged/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Sponsoring Organization categories</description>
    <inlineHelpText>Sponsoring Organization categories</inlineHelpText>
    <label>SO Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankers Bank</fullName>
            </value>
            <value>
                <fullName>Consultant/Other</fullName>
            </value>
            <value>
                <fullName>Corporate Credit Union and Credit Union</fullName>
            </value>
            <value>
                <fullName>Correspondent</fullName>
            </value>
            <value>
                <fullName>Full/Participating Member</fullName>
            </value>
            <value>
                <fullName>Payments Association</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Software/Hardware Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>