unpackaged/main/default/objects/Account/fields/Composite_Billing_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Composite_Billing_Cycles__c</fullName>
    <label>Composite Billing Cycles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Q</fullName>
            </value>
            <value>
                <fullName>1Q Full</fullName>
            </value>
            <value>
                <fullName>2Q</fullName>
            </value>
            <value>
                <fullName>3Q</fullName>
            </value>
            <value>
                <fullName>4Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>