unpackaged/main/default/objects/Account/fields/DDApi__RFJSON__c.field-meta.xml
<CustomField>
    <fullName>DDApi__RFJSON__c</fullName>
    <description>** System Field ** Used to save the session_token for creation of DD payment method without transaction</description>
    <inlineHelpText>** System Field ** Used to save the session_token for creation of DD payment method without transaction</inlineHelpText>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>