unpackaged/main/default/objects/Account/fields/Deposit_Size_for_Education_subscription__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Size_for_Education_subscription__c</fullName>
    <formula>IF(Total_Deposits__c &lt; 500000000, &quot;&lt; $500MM&quot;,
IF(Total_Deposits__c &gt;= 500000000 &amp;&amp; Total_Deposits__c &lt;= 5000000000, &quot;$500MM - $5B&quot;,
IF(Total_Deposits__c &gt; 5000000000 &amp;&amp; Total_Deposits__c &lt;= 20000000000, &quot;&gt; $5B&quot;, null
)))</formula>
    <label>Deposit Size for EduSub</label>
    <type>Text</type>
</CustomField>