unpackaged/main/default/objects/Account/fields/Directory_Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Directory_Search_Name__c</fullName>
    <formula>Name &amp; &#39; (&#39; &amp; Primary_R_T_Number__c &amp; &#39;)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Directory Search Name</label>
    <type>Text</type>
</CustomField>