unpackaged/main/default/objects/Account/fields/DirectoryApi__Directory_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>DirectoryApi__Directory_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Declaration for the record to be removed from all directories.</description>
    <inlineHelpText>Declaration for the record to be removed from all directories.</inlineHelpText>
    <label>Directory Opt Out</label>
    <type>Checkbox</type>
</CustomField>