unpackaged/main/default/objects/Account/fields/DonorApi__Accepts_Unsolicited_Proposals__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Accepts_Unsolicited_Proposals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not philanthropic entities accept unsolicited proposals.</description>
    <inlineHelpText>Indicates whether or not philanthropic entities accept unsolicited proposals.</inlineHelpText>
    <label>Accepts Unsolicited Proposals</label>
    <type>Checkbox</type>
</CustomField>