unpackaged/main/default/objects/Account/fields/DonorApi__Active_Recurring_Gift__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Active_Recurring_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated Fields** Automatically flagged to true when the account is related to an active recurring gift.</description>
    <inlineHelpText>**System Calculated Fields** Automatically flagged to true when the account is related to an active recurring gift.</inlineHelpText>
    <label>Active Recurring Gift</label>
    <type>Checkbox</type>
</CustomField>