unpackaged/main/default/objects/Account/fields/DonorApi__Annual_Giving_Total__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Annual_Giving_Total__c</fullName>
    <description>A range of values available to quickly classify philanthropic entities by annual giving totals to all grantees. Useful for projecting grant application amounts.</description>
    <inlineHelpText>A range of values available to quickly classify philanthropic entities by annual giving totals to all grantees. Useful for projecting grant application amounts.</inlineHelpText>
    <label>Annual Giving Total</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than $100k</fullName>
            </value>
            <value>
                <fullName>$100k - $500k</fullName>
            </value>
            <value>
                <fullName>$500k - $1mil.</fullName>
            </value>
            <value>
                <fullName>$1mil. - $3mil.</fullName>
            </value>
            <value>
                <fullName>$3mil. - $5mil.</fullName>
            </value>
            <value>
                <fullName>$5mil. - $10mil.</fullName>
            </value>
            <value>
                <fullName>$10mil. - $25mil.</fullName>
            </value>
            <value>
                <fullName>$25mil. - $50mil.</fullName>
            </value>
            <value>
                <fullName>$50mil. - $100mil.</fullName>
            </value>
            <value>
                <fullName>$100mil. - $500mil.</fullName>
            </value>
            <value>
                <fullName>More than $500mil.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>