unpackaged/main/default/objects/Account/fields/DonorApi__Auto_Calculate_Household_Greetings__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Auto_Calculate_Household_Greetings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If flagged as true the account will automatically update the household greetings based on DonorNation&#39;s default household greeting format.</description>
    <inlineHelpText>If flagged as true the account will automatically update the household greetings based on DonorNation&#39;s default household greeting format.</inlineHelpText>
    <label>Auto Calculate Household Greetings</label>
    <type>Checkbox</type>
</CustomField>