unpackaged/main/default/objects/Account/fields/DonorApi__Classification__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Classification__c</fullName>
    <description>Classifies the account as a business organization or household.</description>
    <inlineHelpText>Classifies the account as a business organization or household.</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>