unpackaged/main/default/objects/Account/fields/DonorApi__Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not solicit this organization for donations/grants.</description>
    <inlineHelpText>Do not solicit this organization for donations/grants.</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>