unpackaged/main/default/objects/Account/fields/DonorApi__Funding_Cycle__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Funding_Cycle__c</fullName>
    <description>Indicates how often a philanthropic entity accepts LOIs/Proposals.</description>
    <inlineHelpText>Indicates how often a philanthropic entity accepts LOIs/Proposals.</inlineHelpText>
    <label>Funding Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>