unpackaged/main/default/objects/Account/fields/DonorApi__Gift_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Opportunities__c</fullName>
    <description>**System Calculated Field** Counts the number of related gift opportunities.</description>
    <inlineHelpText>**System Calculated Field** Counts the number of related gift opportunities.</inlineHelpText>
    <label>Gift Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>