unpackaged/main/default/objects/Account/fields/DonorApi__Gifts_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gifts_Outstanding__c</fullName>
    <description>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Scheduled&quot;.</description>
    <inlineHelpText>**System Calculated Field** Summarizes the total amount of all related gifts with a status of &quot;Scheduled&quot;.</inlineHelpText>
    <label>Gifts Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>