unpackaged/main/default/objects/Account/fields/DonorApi__Gifts_Value__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gifts_Value__c</fullName>
    <formula>DonorApi__Gifts_Received__c + DonorApi__Gifts_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gifts Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>