unpackaged/main/default/objects/Account/fields/DonorApi__Gives_Anonymously__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gives_Anonymously__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not philanthropic entities give anonymously for ALL Donations associated with them.</description>
    <inlineHelpText>Indicates whether or not philanthropic entities give anonymously for ALL Donations associated with them.</inlineHelpText>
    <label>Gives Anonymously</label>
    <type>Checkbox</type>
</CustomField>