unpackaged/main/default/objects/Account/fields/DonorApi__Has_Open_Gift_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Has_Open_Gift_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated Field** Automatically flagged to true when the account has an open gift opportunity.</description>
    <inlineHelpText>**System Calculated Field** Automatically flagged to true when the account has an open gift opportunity.</inlineHelpText>
    <label>Has Open Gift Opportunity</label>
    <type>Checkbox</type>
</CustomField>