unpackaged/main/default/objects/Account/fields/DonorApi__Household_Default_Greeting__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Household_Default_Greeting__c</fullName>
    <description>**System Calculated Field** Automatically sets the default greeting for the household based upon the selected value in the Household Default Greeting Type picklist.</description>
    <formula>IF(ISPICKVAL(DonorApi__Household_Default_Greeting_Type__c,&quot;Household Informal Greeting&quot;), DonorApi__Household_Informal_Greeting__c, 
IF(ISPICKVAL(DonorApi__Household_Default_Greeting_Type__c,&quot;Household Formal Greeting&quot;), DonorApi__Household_Formal_Greeting__c, DonorApi__Household_Informal_Greeting__c))</formula>
    <inlineHelpText>**System Calculated Field** Automatically sets the default greeting for the household based upon the selected value in the Household Default Greeting Type picklist.</inlineHelpText>
    <label>Household Default Greeting</label>
    <type>Text</type>
</CustomField>