unpackaged/main/default/objects/Account/fields/DonorApi__Household_Default_Greeting_Type__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Household_Default_Greeting_Type__c</fullName>
    <description>*DO NOT CHANGE*</description>
    <inlineHelpText>*DO NOT CHANGE*</inlineHelpText>
    <label>Household Default Greeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Household Informal Greeting</fullName>
                <default>true</default>
                <label>Household Informal Greeting</label>
            </value>
            <value>
                <fullName>Household Formal Greeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>