unpackaged/main/default/objects/Account/fields/DonorApi__Household_Email__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Household_Email__c</fullName>
    <label>Household Email</label>
    <type>Email</type>
</CustomField>