unpackaged/main/default/objects/Account/fields/DonorApi__Household_Informal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Household_Informal_Greeting__c</fullName>
    <label>Household Informal Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>