unpackaged/main/default/objects/Account/fields/DonorApi__Last_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Last_Gift_Amount__c</fullName>
    <description>**System Calculated Field** Calculates the amount of the last gift from the account&#39;s related gifts list.</description>
    <inlineHelpText>**System Calculated Field** Calculates the amount of the last gift from the account&#39;s related gifts list.</inlineHelpText>
    <label>Last Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>