unpackaged/main/default/objects/Account/fields/DonorApi__Last_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Last_Gift_Date__c</fullName>
    <label>Last Gift Date</label>
    <type>Date</type>
</CustomField>