unpackaged/main/default/objects/Account/fields/DonorApi__Matches_Employee_Giving__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Matches_Employee_Giving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this organization match employee gifts?</description>
    <inlineHelpText>Does this organization match employee gifts?</inlineHelpText>
    <label>Matches Employee Giving</label>
    <type>Checkbox</type>
</CustomField>