unpackaged/main/default/objects/Account/fields/DonorApi__Next_Funding_Cycle_Month__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Next_Funding_Cycle_Month__c</fullName>
    <description>What is the (next) month a proposal/LOI is due to this philanthropic entity?</description>
    <inlineHelpText>What is the (next) month a proposal/LOI is due to this philanthropic entity?</inlineHelpText>
    <label>Next Funding Cycle Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>