unpackaged/main/default/objects/Account/fields/DonorApi__Num_Open_Gift_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Num_Open_Gift_Opportunities__c</fullName>
    <description>**System Calculated Field** Calculates the total number of open gift opportunities related to the account.</description>
    <inlineHelpText>**System Calculated Field** Calculates the total number of open gift opportunities related to the account.</inlineHelpText>
    <label>Num Open Gift Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>