unpackaged/main/default/objects/Account/fields/DonorApi__Organizational_Recognition_Name__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Organizational_Recognition_Name__c</fullName>
    <description>If this organization/philanthropic entity gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</description>
    <inlineHelpText>If this organization/philanthropic entity gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</inlineHelpText>
    <label>Organizational Recognition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>