unpackaged/main/default/objects/Account/fields/Email_a_copy_of_SM_Agreeme__c.field-meta.xml
<CustomField>
    <fullName>Email_a_copy_of_SM_Agreeme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please email a copy of Sponsored Member Agreement to Mary Williams (mary.williams@ubb.com)</description>
    <label>Email a copy of SM Agreeme</label>
    <type>Checkbox</type>
</CustomField>