unpackaged/main/default/objects/Account/fields/Facebook_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Account_Name__c</fullName>
    <inlineHelpText>Company&#39;s Facebook Account Name</inlineHelpText>
    <label>Facebook Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>