unpackaged/main/default/objects/Account/fields/Fixed_Dues_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Dues_Calculation__c</fullName>
    <formula>FON_Total_Volume_Rollup__c * FON_Fixed_Rate__c</formula>
    <label>Fixed Dues Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>