unpackaged/main/default/objects/Account/fields/Flow_Notes__c.field-meta.xml
<CustomField>
    <fullName>Flow_Notes__c</fullName>
    <label>Flow Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>