unpackaged/main/default/objects/Account/fields/FON_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>FON_Account_Email__c</fullName>
    <formula>OrderApi__Account_Email__c</formula>
    <label>Account Email</label>
    <type>Text</type>
</CustomField>