unpackaged/main/default/objects/Account/fields/FON_Account_is_Archived__c.field-meta.xml
<CustomField>
    <fullName>FON_Account_is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is a manual process. Check this box to archive a record. Default is unchecked. Used for reporting purposes and remove an Account as a potential option for member sponsorship</inlineHelpText>
    <label>Organization is Inactive</label>
    <type>Checkbox</type>
</CustomField>