unpackaged/main/default/objects/Account/fields/FON_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_Account_Name__c</fullName>
    <description>Formula field to display the Account Name on the Member Portal - do not want customer&#39;s editing the name</description>
    <formula>Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>