unpackaged/main/default/objects/Account/fields/FON_Annual_Dues__c.field-meta.xml
<CustomField>
    <fullName>FON_Annual_Dues__c</fullName>
    <formula>IF(Total_Deposits__c  &lt;= 10000000, &quot;$25&quot;,
IF(Total_Deposits__c  &gt;= 10000001 &amp;&amp; Total_Deposits__c  &lt;= 25000000 , &quot;$50&quot;,
IF(Total_Deposits__c  &gt;= 25000001 &amp;&amp; Total_Deposits__c  &lt;= 50000000, &quot;$75&quot;,
IF(Total_Deposits__c  &gt;= 50000001 &amp;&amp; Total_Deposits__c  &lt;= 100000000, &quot;$100&quot;,
IF(Total_Deposits__c  &gt;= 100000001 &amp;&amp; Total_Deposits__c  &lt;= 500000000, &quot;$200&quot;,
IF(Total_Deposits__c  &gt;= 500000001 &amp;&amp; Total_Deposits__c  &lt;= 1000000000, &quot;$750&quot;,
IF(Total_Deposits__c  &gt;= 1000000001 &amp;&amp; Total_Deposits__c  &lt;= 5000000000, &quot;$2,000&quot;,
IF(Total_Deposits__c  &gt;= 5000000001 &amp;&amp; Total_Deposits__c  &lt;= 20000000000, &quot;$7,000&quot;,
IF(Total_Deposits__c  &gt;= 20000000001 &amp;&amp; Total_Deposits__c  &lt;= 60000000000, &quot;$20,000&quot;,
IF(Total_Deposits__c  &gt;= 60000000001 &amp;&amp; Total_Deposits__c  &lt;= 100000000000, &quot;$40,000&quot;,
IF(Total_Deposits__c  &gt;= 100000000001 &amp;&amp; Total_Deposits__c  &lt;= 150000000000, &quot;$75,000&quot;,
IF(Total_Deposits__c  &gt;= 150000000001 &amp;&amp; Total_Deposits__c  &lt;= 200000000000,&quot;$100,000&quot;,
IF(Total_Deposits__c  &gt;= 200000000001, &quot;$120,000&quot;, null
)))))))))))))</formula>
    <label>SM Annual Dues</label>
    <type>Text</type>
</CustomField>