unpackaged/main/default/objects/Account/fields/FON_AsM_PM_Billing_Tier__c.field-meta.xml
<CustomField>
    <fullName>FON_AsM_PM_Billing_Tier__c</fullName>
    <formula>IF(Total_Deposits__c  &lt;= 500000000, &quot;Up to $500 Million&quot;,
IF(Total_Deposits__c  &gt;= 500000001 &amp;&amp; Total_Deposits__c  &lt;= 1000000000, &quot;$500 Million up to $1 Billion&quot;,
IF(Total_Deposits__c  &gt;= 1000000001 &amp;&amp; Total_Deposits__c  &lt;= 5000000000, &quot;$1 Billion up to $5 Billion&quot;,
IF(Total_Deposits__c  &gt;= 5000000001 &amp;&amp; Total_Deposits__c  &lt;= 20000000000, &quot;$5 Billion up to $20 Billion&quot;,
IF(Total_Deposits__c  &gt;= 20000000001 &amp;&amp; Total_Deposits__c  &lt;= 60000000000, &quot;$20 Billion up to $60 Billion&quot;,
IF(Total_Deposits__c  &gt;= 60000000001 &amp;&amp; Total_Deposits__c  &lt;= 100000000000, &quot;$60 Billion up to $100 Billion&quot;,
IF(Total_Deposits__c  &gt;= 100000000001 &amp;&amp; Total_Deposits__c  &lt;= 150000000000, &quot;$100 Billion up to $150 Billion&quot;,
IF(Total_Deposits__c  &gt;= 150000000001 &amp;&amp; Total_Deposits__c  &lt;= 200000000000, &quot;$150 Billion up to $200 Billion&quot;,
IF(Total_Deposits__c  &gt;= 200000000001, &quot;Over $200 Billion&quot;, null
)))))))))</formula>
    <label>AsM/PM Billing Tier</label>
    <type>Text</type>
</CustomField>